# tp_cpp

./: CMakeLists.txt
cmake/: compile_options.cmake  std.cmake
src/: exo1.ixx  exo2.ixx  exo3.ixx  exo4.ixx  exo5.ixx  exo6.ixx  exo7.ixx  exo8.ixx  exo9.ixx  main.cpp  networkelement.ixx  train.ixx
tests/: exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp  exo5.cpp  exo6.cpp  exo8.cpp  exo9.cpp
